<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <Spinner
            android:id="@+id/spinnerLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin"
            android:text="@string/mode_of_transport"
            />

        <TextView
            android:id="@+id/tvTrain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin"
            tools:text="Train"
            />

        <TextView
            android:id="@+id/tvCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin"
            tools:text="Car"
            />

        <Button
            android:id="@+id/btnNavigate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/component_margin"
            android:text="@string/btn_navigate"
            />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlNoInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ivNoInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_no_network"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivNoInternet"
            android:text="@string/error_no_network"/>
    </RelativeLayout>

</RelativeLayout>